--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/klaytn-contracts"]
+	path = lib/klaytn-contracts
+	url = https://github.com/klaytn/klaytn-contracts
