klaytn-foundry-starterkit 🎊

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,18 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
+src = 'src'
+out = 'out'
+libs = ['lib']
+gas_reports = ["*"]
+optimizer = true
+optimizer_runs = 50000
+via-ir=true
+
+[rpc_endpoints]
+baobab = "${BAOBAB_RPC_URL}"
+cypress = "${CYPRESS_RPC_URL}"
+
+
+
+
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
