--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,16 @@
 cache/
 out/
 
+
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+broadcast/
 
 # Docs
 docs/
+
 
 # Dotenv file
 .env
